Updated audit replay test to use concurrent deque to avoid intermittent test failures.